# RFP-Generator

./: .gitignore  PRD-FULL-PLATFORM.md  README.md  README1.md
backend/: BACKEND_README.md  RAG_DISCOVERY.md  README.md  all_metadata.json  debug_db.py  debug_output.txt  main.py  pyproject.toml  requirements.txt  requirements_core.txt  requirements_minimal.txt  server.py  start_server.bat  start_server.sh
backend/Data/: Annexure to tender_CESC Kolkata_Gate Pass and Safety Requirements.docx  Annexure to tender_CESC Kolkata_Safety Terms.docx  Annexure to tender_General Condtions of Contract.doc  EPC_CESC Kolkata for Distribution Station.docx  EPC_CESC Kolkata for enhancement of tower.docx  Service and Supply_CESC Kolkata for DTR Refurbishment.docx  Service_CDPL Meter Reading & Bill Distribution.docx  Service_CESC Kolkata for Annual Overhauling of Boiler (2).docx  Service_CESC Kolkata for Annual Overhauling of Boiler.docx  Service_CESC Kolkata for GPR Survey.docx  Service_CESC Kolkata for General Civil Repair jobs.docx  Service_CPDL for GIS.docx  Service_MPSL for Billing Recovery.docx  Service_MPSL for O&M and Capex Jobs.docx  Supply_CESC Kolkata for Energy Meters.docx  Supply_CESC Kolkata for HT & LT Cable.docx  Supply_CESC Rajasthan for DTR.docx  Supply_CPDL for 20 MVA PTR.docx  Supply_CPDL for LT and HT Cable.docx
backend/api/: routes.py  schemas.py
backend/cli/: commands.py  output_formatter.py
backend/config/: metadata_schema.py  rfp_types.py  settings.py
backend/core/: document_processor.py  metadata_extractor.py  summarizer.py  version_manager.py
(+31 files in other folders)
